--- a/DjvuApp/packages.config
+++ b/DjvuApp/packages.config
@@ -3,11 +3,11 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="wpa81" />
   <package id="GoogleAnalyticsSDK" version="1.2.12" targetFramework="wpa81" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="wpa81" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="wpa81" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="wpa81" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="wpa81" />
-  <package id="MvvmLightLibs" version="4.4.32.1" targetFramework="wpa81" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="wpa81" />
+  <package id="MvvmLightLibs" version="5.0.2.0" targetFramework="wpa81" />
+  <package id="Newtonsoft.Json" version="6.0.7" targetFramework="wpa81" />
   <package id="sqlite-net" version="1.0.8" targetFramework="wpa81" />
   <package id="Unity" version="3.5.1405-prerelease" targetFramework="wpa81" />
-  <package id="WindowsAzure.MobileServices" version="1.3.0-beta2" targetFramework="wpa81" />
+  <package id="WindowsAzure.MobileServices" version="1.3.0" targetFramework="wpa81" />
 </packages>
