--- a/DjvuApp/packages.config
+++ b/DjvuApp/packages.config
@@ -1,13 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="wpa81" />
-  <package id="GoogleAnalyticsSDK" version="1.2.12" targetFramework="wpa81" />
-  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="wpa81" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="wpa81" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="wpa81" />
-  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="wpa81" />
-  <package id="MvvmLightLibs" version="5.0.2.0" targetFramework="wpa81" />
-  <package id="Newtonsoft.Json" version="6.0.7" targetFramework="wpa81" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="wpa81" />
+  <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="wpa81" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="wpa81" />
+  <package id="SharpDX" version="2.6.3" targetFramework="wpa81" />
+  <package id="SharpDX.Direct2D1" version="2.6.3" targetFramework="wpa81" />
+  <package id="SharpDX.Direct3D11" version="2.6.3" targetFramework="wpa81" />
+  <package id="SharpDX.DXGI" version="2.6.3" targetFramework="wpa81" />
   <package id="sqlite-net" version="1.0.8" targetFramework="wpa81" />
   <package id="Unity" version="3.5.1405-prerelease" targetFramework="wpa81" />
-  <package id="WindowsAzure.MobileServices" version="1.3.0" targetFramework="wpa81" />
+  <package id="WindowsAzure.MobileServices" version="1.3.2" targetFramework="wpa81" />
 </packages>
