--- a/DjvuLibRT.Shared/DjvuLibRT.Shared.vcxitems.filters
+++ b/DjvuLibRT.Shared/DjvuLibRT.Shared.vcxitems.filters
@@ -147,6 +147,7 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)DjvuInterop.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)Renderer.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)VsisWrapper.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)SisWrapper.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MSBuildThisFileDirectory)pch.cpp" />
@@ -304,6 +305,7 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)DjvuInterop.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)Renderer.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)VsisWrapper.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)SisWrapper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="djvulibre">
