Fixed crashing bug. The text fields in the dialogs are autofocusing now. Fixed glitches and poor performance of the outline dialog.

--- a/DjvuApp/DjvuApp.WindowsPhone.csproj
+++ b/DjvuApp/DjvuApp.WindowsPhone.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Misc\FrameworkElementExtensions.cs" />
     <Compile Include="Misc\IocContainer.cs" />
     <Compile Include="Common\IsNullOrEmptyToVisibilityConverter.cs" />
+    <Compile Include="Misc\TextBoxExtensions.cs" />
     <Compile Include="Misc\TrialExperience\AzureTrialService.cs" />
     <Compile Include="Misc\TrialExperience\ITrialService.cs" />
     <Compile Include="Misc\TrialExperience\DjvuReaderUserInfo.cs" />
