djvulibre has been update to version 3.5.27. Fixed multithreading related crashes. Outline parsing has been completely rewritten using ddjvu_api. Refactoring of the string conversion functions.

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,6 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+DjvuApp.Universal/project.lock.json
+DjvuApp.WindowsPhone/BundleArtifacts/arm.txt
+*.bak
